<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:layout_gravity="center_vertical"
    tools:context="com.incobeta.shopcart.LoginActivity">

    <ImageView
        android:id="@+id/loginIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/splash_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/loginIcon"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/edit_bg"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawablePadding="16dp"
        android:paddingLeft="16dp"/>

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/loginEmail"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/edit_bg"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawablePadding="16dp"
        android:paddingLeft="16dp"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:layout_below="@id/loginPassword"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/login_button_text"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account_prompt"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/goToRegisterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/sign_up_button_text"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>


</RelativeLayout>
