<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.incobeta.shopcart.DashboardActivity"
    tools:showIn="@layout/app_bar_dashboard">

    <android.support.design.widget.TabLayout
        android:id="@+id/categoryTab"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"

        android:background="@color/colorPrimary">

        <android.support.design.widget.TabItem
            android:id="@+id/womenTab"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/women_text"/>


        <android.support.design.widget.TabItem
            android:id="@+id/menTab"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/men_text"/>


        <android.support.design.widget.TabItem
            android:id="@+id/kidsTab"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/kids_text"/>

    </android.support.design.widget.TabLayout>

    <RelativeLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/categoryTab"/>


</RelativeLayout>
