<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.incobeta.shopcart.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/registerBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:padding="10dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Create an Account"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:id="@+id/registerLogo"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/register_logo"
            android:layout_below="@id/registerTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" />

        <EditText
            android:id="@+id/registerFirstName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/registerLogo"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/edit_bg"
            android:hint="@string/first_name_hint"
            android:drawableLeft="@drawable/ic_account_box_black_24dp"
            android:drawablePadding="16dp"
            android:paddingLeft="16dp"/>

        <EditText
            android:id="@+id/registerLastName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/registerFirstName"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/edit_bg"
            android:hint="@string/last_name_hint"
            android:drawableLeft="@drawable/ic_account_box_black_24dp"
            android:drawablePadding="16dp"
            android:paddingLeft="16dp"/>

        <EditText
            android:id="@+id/registerPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/registerLastName"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/edit_bg"
            android:hint="@string/phone_hint"
            android:drawableLeft="@drawable/ic_phone_black_24dp"
            android:drawablePadding="16dp"
            android:paddingLeft="16dp"/>

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/registerPhone"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/edit_bg"
            android:hint="@string/email_hint"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="16dp"
            android:paddingLeft="16dp"/>

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/registerEmail"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/edit_bg"
            android:hint="@string/password_hint"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="16dp"
            android:paddingLeft="16dp"/>

        <EditText
            android:id="@+id/registerConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/registerPassword"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/edit_bg"
            android:hint="@string/confirm_password_hint"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="16dp"
            android:paddingLeft="16dp"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_below="@id/registerConfirmPassword"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/sign_up_button_text"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:layout_marginBottom="30dp"/>
    </RelativeLayout>
</ScrollView>
